--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   "devDependencies": {
     "concurrently": "^7.6.0",
     "opn-cli": "^5.0.0"
+  },
+  "dependencies": {
+    "config": "^3.3.12",
+    "crypto": "^1.0.1",
+    "dateformat": "^5.0.3",
+    "qs": "^6.13.1"
   }
 }
